--- a/home-page-front/src/index.html
+++ b/home-page-front/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HomePageFront</title>
+  <title>Let's Try Technology</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
